# launcher

./: .clang-format  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  installnotice.cpp  installnotice.ui  installprogress.cpp  installprogress.h  installprogress.ui  launcher.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.cpp  options.h  options.ui  resources.qrc  runtimeerror.cpp  runtimeerror.h  spec.ts  updater.cpp  updater.h  version.cmake
.github/workflows/: build.yml  ci.yml
data/: main.qml
launcher/: CMakeLists.txt  aria2client.cpp  aria2client.h  ci.patch  installnotice.cpp  installnotice.h  installnotice.ui  installprogress.cpp  installprogress.h  installprogress.ui  launcher.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.cpp  options.h  options.ui  resource.rc  resources.qrc  runtimeerror.cpp  runtimeerror.h  task.h  updater.cpp  updater.h
launcher/res/: default_install_notice.html  install_notice.html
libs/: QArchive.patch  libs.pro
manifests/: assets.json  program_linux_x86_64.json
src/: datatypes.h  launchercore.cpp  launchercore.h  launcherqmlinterface.cpp  launcherqmlinterface.h  launcherui.cpp  launcherui.h  main.cpp  manifestfetcher.cpp  manifestfetcher.h  qjsonformat.h  settings.cpp  settings.h  version.h  versionfetcher.cpp  versionfetcher.h  webaccess.cpp  webaccess.h
templates/: version.h.in
